--- a/.env
+++ b/.env
@@ -24,7 +24,8 @@ APP_SECRET=c1aec4d3b11e3535c24542dd18cc404e
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/symrecipe?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL=mysql://root:@127.0.0.1:3307/chef.NET?serverVersion=mariadb-10.4.11
+
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
@@ -37,5 +38,11 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://80453e14a880a0:f69d9d0590a46c@sandbox.smtp.mailtrap.io:2525
 ###< symfony/mailer ###
+
+###> karser/karser-recaptcha3-bundle ###
+# Get your API key and secret from https://g.co/recaptcha/v3
+RECAPTCHA3_KEY=my_site_key
+RECAPTCHA3_SECRET=my_secret
+###< karser/karser-recaptcha3-bundle ###
