--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,8 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
+
+#On Ajoute le DataBase pour réaliser les tests dans une base de données spécial pour les tests
+DATABASE_URL=mysql://root:@127.0.0.1:3307/chef.NET?serverVersion=mariadb-10.4.11
+MAILER_DSN=smtp://80453e14a880a0:f69d9d0590a46c@sandbox.smtp.mailtrap.io:2525
+
